# Yime-prototype

./: .coverage  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  AGENTS.md  CROSS_WINDOW_REGRESSION_CHECKLIST.md  DEVELOPMENT.md  DIRECT_INSTALL_GUIDE.md  EFFICIENCY_BASELINE.md  IDE_INPUT_SOLUTION.md  INSTALL.md  LEGAL_REVIEW_CHECKLIST.md  LICENSING_INDEX.md  LICENSING_STRATEGY_CN_PRIORITY.md  LICENSING_STRATEGY_INTL_PRIORITY.md  LOCAL_PHRASE_PRIORITY_RULES.md  MANIFEST.in  MSKLC_RELEASE_QUICKSTART.md  NOTEPAD_FONT_SETUP.md  PIANYIN_TECH_BRIDGE.md  PINYIN_HANZI_DB_DOMAINS.md  PORTABLE_PYTHON_GUIDE.md  README.md  REBUILD_KEYBOARD.md  REVERSE_LOOKUP_AND_USER_LEXICON.md  REVERSE_LOOKUP_AND_USER_LEXICON_QUICK_REF.md  SHOUYIN_SPLITTER_RULES.md  STATUS_FEEDBACK.md  TERMINAL_FONT_SETUP.md  TERMINOLOGY_INDEX.md  THEORY.md  THEORY_INDEX.md  YINYUAN_TERMINOLOGY.md  YINYUAN_TERMINOLOGY_EN.md  Yime.code-workspace  cspell.json  dev_check.cmd  dev_unlock.cmd  fix_app_pause.py  (+44 more)
.arts/: launch.json  settings.json
.cspell/: yime-domain-terms.txt  yime-pinyin-normalized.txt  yime-tooling-terms.txt  yime-windows-terms.txt
.debug_scripts/: fix_tests.py  test_caret.py  test_pynput.py  test_title.py
docs/: API.md  CANDIDATE_CORPUS_ROADMAP.md  CODEPOINT_POLICY.md  CROSS_WINDOW_REGRESSION_CHECKLIST.md  CURRENT_ARCHITECTURE.md  DATAFILES.md  DEVELOPMENT.md  DICTIONARY_PINYIN_COMPLIANCE.md  EFFICIENCY_BASELINE.md  FAQ.md  IDE_INPUT_SOLUTION.md  INPUT_CANDIDATE_MODEL.md  INSTALL.md  KEYBOARD_LAYOUT_PIPELINE.md  LAYOUT_CHANGE_LOCK.md  LEXICON_LINT.md  LEXICON_SOURCE_BUNDLE.md  MSKLC_PRECOMPILE_CHECKLIST.md  MSKLC_RELEASE_QUICKSTART.md  NOTEPAD_FONT_SETUP.md  PIANYIN_ANALYSIS_OVERVIEW.md  PIANYIN_TECH_BRIDGE.md  PIANYIN_TECH_BRIDGE_EN.md  PINYIN_HANZI_DB_DOMAINS.md  README.md  REBUILD_KEYBOARD.md  REVERSE_LOOKUP_AND_USER_LEXICON.md  REVERSE_LOOKUP_AND_USER_LEXICON_QUICK_REF.md  SHOUYIN_SPLITTER_RULES.md  SOURCE_AND_ARTIFACTS.md  SYLLABLE_ENCODING_RULES.md  TERMINOLOGY_INDEX.md  THEORY.md  THEORY_INDEX.md  USAGE.md  USER_HELP.md  YINYUAN_TERMINOLOGY.md  YINYUAN_TERMINOLOGY_EN.md  ZAOYIN_YUEYIN_CLASSIFICATION.md  ZAOYIN_YUEYIN_CLASSIFICATION_EN.md  (+4 more)
external_data/: word_freq_README.md
help/: README.md  menu-and-lexicon.md  troubleshooting.md
install/: INSTALLATION_GUIDE.md  MINIMAL_TRIAL_DELIVERY.md  PORTABLE_PYTHON_GUIDE.md  PORTABLE_RELEASE_GUIDE.md  PYTHON312_INSTALLATION_GUIDE.md  PYWIN32_INSTALLATION.md  QUICKSTART_PY312.md  WEASEL_YIME_SMOKE_CASES.md  WINDOWS_FRONTENDS_STATUS.md  friend-trial-checklist.md  friend-trial-message-template.md  friend-trial-one-page.md  friend-trial-one-page.txt  friend-trial-package-readme.txt
(+666 files in other folders)
