[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finals_classifier"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["syllable*", "pianyin*"]

[tool.setuptools.package-data]
"syllable.analysis.slice" = ["yinyuan/*.json"]
