[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yime"
version = "0.1.1"
description = "Windows IME prototype and supporting pinyin rebuild pipeline for Yime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"colorama>=0.4.6",
	"pynput>=1.7.6",
	"pywin32>=305; platform_system == 'Windows'",
	"tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
	"coverage>=7.0.0",
	"pytest>=8.0.0",
	"pytest-cov>=3.0.0",
]
portable = [
	"pyinstaller>=6.12.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["yime*", "syllable*"]
exclude = ["tests*", "tools*"]

[tool.setuptools.package-data]
"syllable" = ["yinyuan/*.json"]
"syllable.codec" = ["*.json"]
"yime" = ["*.json", "*.sql", "*.txt", "*.csv", "legacy/pending_removal/compat_internal_data/*.json"]

[tool.setuptools.exclude-package-data]
"yime" = ["yinjie_mapping.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/manual"]
python_files = ["test_*.py", "*_test.py", "verify_*.py"]
